force-app/main/default/objects/Account/fields/Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category__c</fullName>
    <label>Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACR Contracted</fullName>
            </value>
            <value>
                <fullName>Non ACR Contracted</fullName>
            </value>
            <value>
                <fullName>ACR Non Contracted</fullName>
            </value>
            <value>
                <fullName>Non Contracted</fullName>
                <default>true</default>
                <label>Non Contracted</label>
            </value>
            <value>
                <fullName>Non ACR</fullName>
                <isActive>false</isActive>
                <label>Non ACR</label>
            </value>
            <value>
                <fullName>Non ACR Non Contracted</fullName>
                <isActive>false</isActive>
                <label>Non ACR Non Contracted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>