force-app/main/default/objects/Account/fields/Customer_Category_Static__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category_Static__c</fullName>
    <label>Customer Category (Static)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACR</fullName>
            </value>
            <value>
                <fullName>Non-ACR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>