force-app/main/default/objects/Account/fields/Customer_s_Max_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Max_Annual_Revenue__c</fullName>
    <label>Customer&apos;s Max Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>