force-app/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GOVERNMENT</fullName>
            </value>
            <value>
                <fullName>GOVERNMENT UNDERTAKING</fullName>
            </value>
            <value>
                <fullName>PRIVATE</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
                <isActive>false</isActive>
                <label>Company</label>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
            <value>
                <fullName>OTHERS</fullName>
                <isActive>false</isActive>
                <label>OTHERS</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <isActive>false</isActive>
                <label>Prospect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>