force-app/main/default/objects/Account/fields/Deal_Created__c.field-meta.xml
<CustomField>
    <fullName>Deal_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field is used in PB &quot;Create Deal&quot;. When consumption becomes 80%, it will create deal</description>
    <label>Deal Created</label>
    <type>Checkbox</type>
</CustomField>