force-app/main/default/objects/Account/fields/docLinkId__c.field-meta.xml
<CustomField>
    <fullName>docLinkId__c</fullName>
    <label>docLinkId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>