force-app/main/default/objects/Account/fields/Email_Sent_at_90_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_at_90_Consumption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent at 90% Consumption</label>
    <type>Checkbox</type>
</CustomField>