force-app/main/default/objects/Account/fields/Enity_Type__c.field-meta.xml
<CustomField>
    <fullName>Enity_Type__c</fullName>
    <description>Individual/PS/Company etc.
Derived from PAN</description>
    <label>Enity Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>