force-app/main/default/objects/Account/fields/eSHIP_Contract__c.field-meta.xml
<CustomField>
    <fullName>eSHIP_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>eSHIP Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Customers (eSHIP Contract)</relationshipLabel>
    <relationshipName>Customers3</relationshipName>
    <type>Lookup</type>
</CustomField>