force-app/main/default/objects/Account/fields/Export_House__c.field-meta.xml
<CustomField>
    <fullName>Export_House__c</fullName>
    <label>Export House</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Star Trading House</fullName>
            </value>
            <value>
                <fullName>Super Star Trading House</fullName>
            </value>
            <value>
                <fullName>Export house For BVCI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>