force-app/main/default/objects/Account/fields/Failed_Self_Onboard__c.field-meta.xml
<CustomField>
    <fullName>Failed_Self_Onboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failed Self Onboard</label>
    <type>Checkbox</type>
</CustomField>