force-app/main/default/objects/Account/fields/Financial_Summary_API_Status__c.field-meta.xml
<CustomField>
    <fullName>Financial_Summary_API_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Summary API Status</label>
    <type>Checkbox</type>
</CustomField>