force-app/main/default/objects/Account/fields/Form_Of_Organization__c.field-meta.xml
<CustomField>
    <fullName>Form_Of_Organization__c</fullName>
    <description>This field is to identify what kind of customer is ? so we can ask selected KYC documents.</description>
    <label>Form Of Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>HUF</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Partnership Firm</fullName>
            </value>
            <value>
                <fullName>Trust/Foundation</fullName>
            </value>
            <value>
                <fullName>Body Of Individual</fullName>
            </value>
            <value>
                <fullName>Local Authority</fullName>
            </value>
            <value>
                <fullName>Artificial Juridical Person</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Association Of Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>