force-app/main/default/objects/Account/fields/Gross_Weight_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight_Shipped__c</fullName>
    <formula>Active_Contract__r.Gross_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Weight Shipped</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>