force-app/main/default/objects/Account/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BVC Global</fullName>
            </value>
            <value>
                <fullName>BVC Brinks</fullName>
            </value>
            <value>
                <fullName>BV Chinai</fullName>
            </value>
            <value>
                <fullName>BVC Logistics</fullName>
            </value>
            <value>
                <fullName>B.V. Chinai &amp; Co. (India) Private Limited</fullName>
                <isActive>false</isActive>
                <label>B.V. Chinai &amp; Co. (India) Private Limited</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>