force-app/main/default/objects/Account/fields/GST_Registered__c.field-meta.xml
<CustomField>
    <fullName>GST_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST Registered</label>
    <type>Checkbox</type>
</CustomField>