force-app/main/default/objects/Account/fields/GST_Value_Range__c.field-meta.xml
<CustomField>
    <fullName>GST_Value_Range__c</fullName>
    <label>GST Value Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Slab: Rs. 500 Cr. and above</fullName>
            </value>
            <value>
                <fullName>Slab: Rs. 5 Cr. to 25 Cr.</fullName>
            </value>
            <value>
                <fullName>Slab: Rs. 25 Cr. to 100 Cr.</fullName>
            </value>
            <value>
                <fullName>Slab: Rs. 100 Cr. to 500 Cr.</fullName>
            </value>
            <value>
                <fullName>Slab: Rs. 1.5 Cr. to 5 Cr.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>