force-app/main/default/objects/Account/fields/Has_Parent__c.field-meta.xml
<CustomField>
    <fullName>Has_Parent__c</fullName>
    <formula>IF(  ISBLANK(ParentId  ) , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Parent ?</label>
    <type>Checkbox</type>
</CustomField>