force-app/main/default/objects/Account/fields/HasAddress__c.field-meta.xml
<CustomField>
    <fullName>HasAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasAddress</label>
    <type>Checkbox</type>
</CustomField>