force-app/main/default/objects/Account/fields/HasRegisteredAccount__c.field-meta.xml
<CustomField>
    <fullName>HasRegisteredAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasRegisteredAccount</label>
    <type>Checkbox</type>
</CustomField>