force-app/main/default/objects/Account/fields/IEC__c.field-meta.xml
<CustomField>
    <fullName>IEC__c</fullName>
    <description>Its only for BVCI.</description>
    <label>IEC(KYC Partner)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>