force-app/main/default/objects/Account/fields/IEC_Manual_Input__c.field-meta.xml
<CustomField>
    <fullName>IEC_Manual_Input__c</fullName>
    <label>IEC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>