force-app/main/default/objects/Account/fields/Intercompany_Code__c.field-meta.xml
<CustomField>
    <fullName>Intercompany_Code__c</fullName>
    <defaultValue>&quot;999&quot;</defaultValue>
    <label>Intercompany Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>