force-app/main/default/objects/Account/fields/Invoice_Batch__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Batch__c</fullName>
    <label>Invoice Batch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__InvoiceBatch</valueSetName>
    </valueSet>
</CustomField>