force-app/main/default/objects/Account/fields/Invoice_Hard_Copy_Required__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Hard_Copy_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Kindly check this field if you require the Invoice Hard Copy.</inlineHelpText>
    <label>Invoice Hard Copy Required</label>
    <type>Checkbox</type>
</CustomField>