force-app/main/default/objects/Account/fields/Invoice_Pre_Approval__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Pre_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Pre Approval</label>
    <type>Checkbox</type>
</CustomField>