force-app/main/default/objects/Account/fields/Is_Billing_Address_Present__c.field-meta.xml
<CustomField>
    <fullName>Is_Billing_Address_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Billing Address Present</label>
    <type>Checkbox</type>
</CustomField>