force-app/main/default/objects/Account/fields/Is_day_5th__c.field-meta.xml
<CustomField>
    <fullName>Is_day_5th__c</fullName>
    <formula>IF( DAY( TODAY() ) = 31 &amp;&amp; HOUR(TIMEVALUE(NOW() + (5.5/24))) = 19,
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is day 5th?</label>
    <type>Checkbox</type>
</CustomField>