force-app/main/default/objects/Account/fields/Is_Finance_Contact_Present__c.field-meta.xml
<CustomField>
    <fullName>Is_Finance_Contact_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Finance Contact Present</label>
    <type>Checkbox</type>
</CustomField>