force-app/main/default/objects/Account/fields/Is_Primary_Address_Present__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Address_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Address Present</label>
    <type>Checkbox</type>
</CustomField>