force-app/main/default/objects/Account/fields/KARZAA_Company_Type__c.field-meta.xml
<CustomField>
    <fullName>KARZAA_Company_Type__c</fullName>
    <description>Private, Government, Government undertaking, Other</description>
    <label>Company Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>