force-app/main/default/objects/Account/fields/KARZAA_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>KARZAA_GSTIN__c</fullName>
    <label>GSTIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>