force-app/main/default/objects/Account/fields/KARZAA_KYC_Verified__c.field-meta.xml
<CustomField>
    <fullName>KARZAA_KYC_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated via KARZAA API upon verification</description>
    <label>KYC Verified</label>
    <type>Checkbox</type>
</CustomField>