force-app/main/default/objects/Account/fields/KARZAA_Name_As_Per_PAN__c.field-meta.xml
<CustomField>
    <fullName>KARZAA_Name_As_Per_PAN__c</fullName>
    <description>Karza API need to write it.</description>
    <label>Name As Per PAN (KYC Partner)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>