force-app/main/default/objects/Account/fields/KARZAA_SEZ_Status__c.field-meta.xml
<CustomField>
    <fullName>KARZAA_SEZ_Status__c</fullName>
    <label>SEZ Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>