force-app/main/default/objects/Account/fields/KYC_Failed_Reason__c.field-meta.xml
<CustomField>
    <fullName>KYC_Failed_Reason__c</fullName>
    <label>KYC Failed Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>