force-app/main/default/objects/Account/fields/KYC_Indicator_For_CB_Customer__c.field-meta.xml
<CustomField>
    <fullName>KYC_Indicator_For_CB_Customer__c</fullName>
    <formula>IF( AND((NOT((ISBLANK(IEC__c)))), (IEC__c == IEC_Manual_Input__c) ,
        
( OR(
( ISPICKVAL( KYC_Status__c , &apos;API Verified&apos;) ),
( ISPICKVAL( KYC_Status__c , &apos;Manually Verified&apos;) ))),
( Is_Billing_Address_Present__c ),
( Billing_Address__c &lt;&gt; null ),
( Is_Finance_Contact_Present__c ),
(  Primary_Address__c  &lt;&gt; null  )

) ,  IMAGE(&apos;https://bvc2--c.documentforce.com/sfc/servlet.shepherd/version/download/0685g000002k2f5&apos;, &apos;&apos;, 25, 25), IMAGE(&apos;https://bvc2--c.documentforce.com/sfc/servlet.shepherd/version/download/0685g000002k2ew&apos;, &apos;&apos;, 25, 25))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KYC Indicator For CB Customer</label>
    <type>Text</type>
</CustomField>