force-app/main/default/objects/Account/fields/KYC_Indicator_for_Domestic_Flag__c.field-meta.xml
<CustomField>
    <fullName>KYC_Indicator_for_Domestic_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KYC Indicator for Domestic Flag</label>
    <type>Checkbox</type>
</CustomField>