force-app/main/default/objects/Account/fields/KYC_Indicator_for_International_Flag__c.field-meta.xml
<CustomField>
    <fullName>KYC_Indicator_for_International_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KYC Indicator for International Flag</label>
    <type>Checkbox</type>
</CustomField>