force-app/main/default/objects/Account/fields/Legacy_Record__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Record</label>
    <type>Checkbox</type>
</CustomField>