force-app/main/default/objects/Account/fields/Liability_Cover_By_BVC_For_Eship__c.field-meta.xml
<CustomField>
    <fullName>Liability_Cover_By_BVC_For_Eship__c</fullName>
    <label>Liability Cover By BVC For Eship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>