force-app/main/default/objects/Account/fields/link_expired__c.field-meta.xml
<CustomField>
    <fullName>link_expired__c</fullName>
    <formula>IF(NOW() -  link_generated_date__c &gt;= 7, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>link expired</label>
    <type>Checkbox</type>
</CustomField>