force-app/main/default/objects/Account/fields/link_generated_date__c.field-meta.xml
<CustomField>
    <fullName>link_generated_date__c</fullName>
    <label>link generated date</label>
    <type>DateTime</type>
</CustomField>