force-app/main/default/objects/Account/fields/Name_As_Per_PAN_Manual_Input__c.field-meta.xml
<CustomField>
    <fullName>Name_As_Per_PAN_Manual_Input__c</fullName>
    <label>Name As Per PAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>