force-app/main/default/objects/Account/fields/Net_Weight_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight_Shipped__c</fullName>
    <formula>Active_Contract__r.Net_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Weight Shipped</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>