force-app/main/default/objects/Account/fields/No_Of_Free_Atttemps_For_Eship__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Free_Atttemps_For_Eship__c</fullName>
    <label>No Of Free Atttemps For Eship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>