force-app/main/default/objects/Account/fields/Number_of_days_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days_of_Contract__c</fullName>
    <formula>Active_Contract__r.EndDate -  Active_Contract__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days of Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>