force-app/main/default/objects/Account/fields/of_Contract_Consumption__c.field-meta.xml
<CustomField>
    <fullName>of_Contract_Consumption__c</fullName>
    <formula>Active_Contract__r.of_Contract_Consumption__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Contract Consumption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>