force-app/main/default/objects/Account/fields/On_Boarded_From_Community__c.field-meta.xml
<CustomField>
    <fullName>On_Boarded_From_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Boarded From Community ?</label>
    <type>Checkbox</type>
</CustomField>