force-app/main/default/objects/Account/fields/On_Expiry_of_ACR__c.field-meta.xml
<CustomField>
    <fullName>On_Expiry_of_ACR__c</fullName>
    <label>On Expiry of ACR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>